Fixed bug with URL encoding and loading multiple models.